--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="settings">Settings</string>
     <string name="sound">Sound</string>
     <string name="music">Music</string>
+    <string name="errorCreating">Please choose another lobby</string>
+    <string name="errorJoining">Can\'t join this lobby</string>
 </resources>
